trying to fix map not showing on index page

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -39,6 +39,6 @@
 
 .map-container{
     width:100%;
-    height:50vh;
+    height:60vh;
     position: relative;
 }
